--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,15 +107,17 @@
 #dialog_musk {
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    /* background: rgba(0, 0, 0, 0.3); */
     position: fixed;
     /* opacity: 30%; */
 }
 
 #dialog_musk img {
     position: absolute;
-    bottom: 10px;
-    left: 40px;
+    bottom: 0px;
+    left: 60px;
+    height: 90%;
+    /* background: rgba(255, 255, 255, 0.3); */
 }
 
 #dialog {
