--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,21 @@
     overflow: hidden;
 }
 
+body {
+    -webkit-touch-callout: none;
+    /*系统默认菜单被禁用*/
+    -webkit-user-select: none;
+    /*webkit浏览器*/
+    -khtml-user-select: none;
+    /*早起浏览器*/
+    -moz-user-select: none;
+    /*火狐浏览器*/
+    -ms-user-select: none;
+    /*IE浏览器*/
+    user-select: none;
+    /*用户是否能够选中文本*/
+}
+
 
 /* body {
     background-color: #000;
@@ -14,6 +29,16 @@
     height: 100%;
     background: black;
     position: fixed;
+}
+
+
+/* 用于Game Over */
+
+#loading_musk h1 {
+    text-align: center;
+    margin-top: 200px;
+    font-size: 350%;
+    color: #fff;
 }
 
 #loading_svg {
@@ -52,6 +77,7 @@
     top: 0;
     /*离顶部的距离为0*/
     margin-bottom: 5px;
+    z-index: 9;
 }
 
 .top ul {
@@ -105,6 +131,7 @@
 }
 
 #dialog_musk {
+    z-index: 10;
     width: 100%;
     height: 100%;
     /* background: rgba(0, 0, 0, 0.3); */
@@ -121,7 +148,7 @@
 }
 
 #dialog {
-    z-index: 10;
+    z-index: 11;
     /* background: #fff; */
     /* color: #fff; */
     position: absolute;
@@ -165,7 +192,7 @@
 } */
 
 #choice {
-    z-index: 10;
+    z-index: 11;
     position: absolute;
     right: 120px;
     bottom: 220px;
@@ -181,6 +208,7 @@
     /* background-color: #c2c1c1; */
     border: #fff 1px solid;
     border-radius: 3px;
+    /* text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000; */
 }
 
 #choice li:hover {
@@ -210,7 +238,7 @@
     margin-bottom: 3px;
     color: #FFF;
     /* font-size: x-large; */
-    margin: 20px;
+    margin: 5px;
     margin-right: 20px;
     text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000;
 }
