--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,7 +77,7 @@ body {
     top: 0;
     /*离顶部的距离为0*/
     margin-bottom: 5px;
-    z-index: 9;
+    z-index: 8;
 }
 
 .top ul {
@@ -132,6 +132,15 @@ body {
 
 #dialog_musk {
     z-index: 10;
+    width: 100%;
+    height: 100%;
+    /* background: rgba(0, 0, 0, 0.3); */
+    position: fixed;
+    /* opacity: 30%; */
+}
+
+#musk {
+    z-index: 9;
     width: 100%;
     height: 100%;
     /* background: rgba(0, 0, 0, 0.3); */
