添加了对Chrome的emoji的字体支持

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,17 @@
     overflow: hidden;
 }
 
+@font-face {
+    /*font-properties*/
+    font-family: "s";
+    src: url('../font/seguisym.ttf');
+    /*IE9*/
+}
+
+.emojiFont {
+    font-family: "s" !important;
+}
+
 body {
     -webkit-touch-callout: none;
     /*系统默认菜单被禁用*/
